--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,14 @@ layout: default
 ---
 
 <article>
-  <h1 class="post-title">{{ page.title }}</h1>
-  <div class="post-meta">
-    <span>פורסם ב-{{ page.date | date: "%B %d, %Y" }}</span>
-    <span>מאת {{ page.author | default: site.author }}</span>
-  </div>
+  <header>
+    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="post-meta">
+      <span><i class="far fa-calendar"></i> {{ page.date | date: "%B %d, %Y" }}</span>
+      <span><i class="far fa-user"></i> {{ page.author | default: site.author }}</span>
+      <span><i class="far fa-clock"></i> {{ content | number_of_words | divided_by: 180 | round }} min read</span>
+    </div>
+  </header>
 
   <div class="post-content">
     {{ content }}
@@ -21,13 +24,25 @@ layout: default
   </div>
   {% endif %}
 
-  <div class="post-navigation">
+  <div class="post-navigation" style="display: flex; justify-content: space-between; margin-top: 2rem; padding-top: 1.5rem; border-top: 1px solid var(--border-color);">
     {% if page.previous.url %}
-    <span>prev: <a href="{{ page.previous.url }}">{{ page.previous.title }}</a></span>
+    <a href="{{ page.previous.url }}" class="button" style="width: 48%; text-align: center; padding: 0.8rem 1.2rem;">&larr; הקודם: {{ page.previous.title | truncate: 25 }}</a>
     {% endif %}
     
     {% if page.next.url %}
-    <span style="float: left;">next: <a href="{{ page.next.url }}">{{ page.next.title }}</a></span>
+    <a href="{{ page.next.url }}" class="button" style="width: 48%; text-align: center; padding: 0.8rem 1.2rem;">הבא: {{ page.next.title | truncate: 25 }} &rarr;</a>
     {% endif %}
+  </div>
+  
+  <div class="comments" style="margin-top: 3rem; padding-top: 2rem; border-top: 1px solid var(--border-color);">
+    <h3>השאירו הערה</h3>
+    <form style="margin-top: 1.5rem;">
+      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin-bottom: 1rem;">
+        <input type="text" placeholder="שם" required>
+        <input type="email" placeholder="אימייל" required>
+      </div>
+      <textarea placeholder="תגובה" rows="5" style="margin-bottom: 1rem; width: 100%;" required></textarea>
+      <button type="submit" class="button">פרסם תגובה</button>
+    </form>
   </div>
 </article>
