Implement Astro-inspired modern design with advanced styling and animations

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <header>
+      <div class="header-gradient"></div>
       <h1 class="site-title">{{ site.title }}</h1>
       <p class="site-description">{{ site.description }}</p>
       
@@ -66,7 +67,7 @@
         
         <div class="widget">
           <h3>טיפים מקצועיים</h3>
-          <p>הירשמו לקבלת טיפים שיווקיים ועסקייםgratis:</p>
+          <p>הירשמו לקבלת טיפים שיווקיים ועסקיים:</p>
           <form>
             <input type="email" placeholder="כתובת אימייל" required>
             <button type="submit" class="button">הרשמה עכשיו</button>
